@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
+        - removed Module::Pluggable::Fast hack in favor of
+          Module::Pluggable::Object
         - extended uri_for, added dispatcher->uri_for_action
         - added Catalyst::Base->action_for('methodname')
         - checked and tested :Args multimethod dispatch
